force-app/main/default/objects/Opprtunity_Line_Item_Details__c/Opprtunity_Line_Item_Details__c.object-meta.xml
<CustomObject>
    <label>Service</label>
    <nameField>
        <label>Opprtunity Line Item Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>