force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Airline2__c.field-meta.xml
<CustomField>
    <fullName>Airline2__c</fullName>
    <label>Airline</label>
    <type>TextArea</type>
</CustomField>