force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Arival_Date1__c.field-meta.xml
<CustomField>
    <fullName>Arival_Date1__c</fullName>
    <label>Arival Date</label>
    <type>DateTime</type>
</CustomField>