force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <label>Arrival Airport</label>
    <type>TextArea</type>
</CustomField>