force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>