force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Catalogue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalogue</label>
    <referenceTo>Catalogue__c</referenceTo>
    <relationshipLabel>Opportunity Line Items Details</relationshipLabel>
    <relationshipName>Opportunity_Line_Items_Details</relationshipName>
    <type>Lookup</type>
</CustomField>