force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>vaccine</fullName>
            </value>
            <value>
                <fullName>PCR</fullName>
            </value>
            <value>
                <fullName>Honeymoon</fullName>
            </value>
            <value>
                <fullName>Group Travel</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Cultural and historical</fullName>
            </value>
            <value>
                <fullName>Water sports</fullName>
            </value>
            <value>
                <fullName>Adventure tours</fullName>
            </value>
            <value>
                <fullName>General site seeing tours</fullName>
            </value>
            <value>
                <fullName>cuisine and culture tours</fullName>
            </value>
            <value>
                <fullName>Wilderness and wildLife</fullName>
            </value>
            <value>
                <fullName>Relaxation and Meditation</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Product launch</fullName>
            </value>
            <value>
                <fullName>Beauty</fullName>
            </value>
            <value>
                <fullName>Concert</fullName>
            </value>
            <value>
                <fullName>Festival</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>VIP Airport Transfers</fullName>
            </value>
            <value>
                <fullName>VIP Airport Service / Lounge Access</fullName>
            </value>
            <value>
                <fullName>Airport Meet &amp; Greet</fullName>
            </value>
            <value>
                <fullName>Airport Express Check-In</fullName>
            </value>
            <value>
                <fullName>Transfer service</fullName>
            </value>
            <value>
                <fullName>Private Chauffeurs</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Beach House</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>