force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Child_0_2yr__c.field-meta.xml
<CustomField>
    <fullName>Child_0_2yr__c</fullName>
    <label>Child 0-2yr</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>