force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Child_3_12yr__c.field-meta.xml
<CustomField>
    <fullName>Child_3_12yr__c</fullName>
    <label>Child 3-12yr</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>