force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <label>Citizenship</label>
    <type>TextArea</type>
</CustomField>