force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <label>Confirmation Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>