force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Line Items Details</relationshipLabel>
    <relationshipName>Opportunity_Line_Items_Details</relationshipName>
    <type>Lookup</type>
</CustomField>