force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Departure_1__c.field-meta.xml
<CustomField>
    <fullName>Departure_1__c</fullName>
    <label>Departure</label>
    <type>TextArea</type>
</CustomField>