force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport__c</fullName>
    <label>Departure Airport</label>
    <type>TextArea</type>
</CustomField>