force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Departure_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_3__c</fullName>
    <label>Departure Date</label>
    <type>DateTime</type>
</CustomField>