force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Destination_3__c.field-meta.xml
<CustomField>
    <fullName>Destination_3__c</fullName>
    <label>Destination</label>
    <type>TextArea</type>
</CustomField>