force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Number_of_guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_guests__c</fullName>
    <label>Number of guests</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>