force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Operation_Details__c.field-meta.xml
<CustomField>
    <fullName>Operation_Details__c</fullName>
    <label>Operation Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>