force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunity Line Items Details</relationshipLabel>
    <relationshipName>Opportunity_Line_Items_Details</relationshipName>
    <type>Lookup</type>
</CustomField>