force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Prefrence__c.field-meta.xml
<CustomField>
    <fullName>Prefrence__c</fullName>
    <label>preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>