force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Promo_code__c.field-meta.xml
<CustomField>
    <fullName>Promo_code__c</fullName>
    <label>Promo code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>