force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Request_Details__c</fullName>
    <label>Request Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>