force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>Room occupancy</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>