force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Terminal__c.field-meta.xml
<CustomField>
    <fullName>Terminal__c</fullName>
    <label>Terminal</label>
    <type>TextArea</type>
</CustomField>