force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>