force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Time_slot__c.field-meta.xml
<CustomField>
    <fullName>Time_slot__c</fullName>
    <label>Time slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>