force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Trip_type__c.field-meta.xml
<CustomField>
    <fullName>Trip_type__c</fullName>
    <label>Trip type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-way</fullName>
            </value>
            <value>
                <fullName>RoundTrip</fullName>
            </value>
            <value>
                <fullName>Multi-city</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>