force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Type_of_visa__c.field-meta.xml
<CustomField>
    <fullName>Type_of_visa__c</fullName>
    <label>Type of visa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schengen</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Panama</fullName>
            </value>
            <value>
                <fullName>Papua New Guinea</fullName>
            </value>
            <value>
                <fullName>Paraguay</fullName>
            </value>
            <value>
                <fullName>Peru</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
            <value>
                <fullName>Sierra Leone</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Slovakia</fullName>
            </value>
            <value>
                <fullName>Slovenia</fullName>
            </value>
            <value>
                <fullName>Solomon Islands</fullName>
            </value>
            <value>
                <fullName>Tonga</fullName>
            </value>
            <value>
                <fullName>Trinidad and Tobago</fullName>
            </value>
            <value>
                <fullName>Tunisia</fullName>
            </value>
            <value>
                <fullName>Niger</fullName>
            </value>
            <value>
                <fullName>Nigeria</fullName>
            </value>
            <value>
                <fullName>Morocco</fullName>
            </value>
            <value>
                <fullName>Liberia</fullName>
            </value>
            <value>
                <fullName>Libya</fullName>
            </value>
            <value>
                <fullName>Australia and territories</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>