force-app/main/default/objects/Opprtunity_Line_Item_Details__c/fields/Venu__c.field-meta.xml
<CustomField>
    <fullName>Venu__c</fullName>
    <label>Venu</label>
    <type>TextArea</type>
</CustomField>